k8s/overlays/prod/ingress/realestate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realestate-ingress
  namespace: realestate
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - realestateproject.casa
        - www.realestateproject.casa
        - cms.realestateproject.casa
      secretName: realestate-tls
  rules:
    - host: realestateproject.casa
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: realestate-api-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realestate-frontend-svc
                port:
                  number: 80

    - host: www.realestateproject.casa
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: realestate-api-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realestate-frontend-svc
                port:
                  number: 80

    - host: cms.realestateproject.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realestate-cms-svc
                port:
                  number: 80
